mock-exams/topic-wise/ServicesAndNetworking/network-policies/q3/secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
spec:
  rules:
  - host: secure.example.com
    http:
      paths:
      - backend:
          service:
            name: web-svc
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - secure.example.com
    secretName: tls-cert
status:
  loadBalancer: {}
